# aws-breaking-barriers-2026

./: .gitignore  AGENTS.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  deployment-config.json  package-lock.json  package.json
.kiro/steering/: development-guidelines.md
agents/caddy/: agent-old.py  agent.py  pyproject.toml
agents/chat-agent/: agent.py  config.yaml
amplify/: backend.ts  package.json
amplify/data/: resource.ts
architecture/: .$architecture.drawio.bkp  .$architecture.drawio.dtmp  architecture.drawio
concierge_agent/mcp_notes_tools/: Dockerfile  __init__.py  dynamodb_manager.py  requirements.txt  server.py
concierge_agent/supervisor_agent/: Dockerfile  __init__.py  advice_subagent.py  agent.py  dynamodb_manager.py  gateway_client.py  prompt_manager.py
docs/: AGENT_CAPABILITIES.md
frontend/: deploy-config.example.json  deploy.sh  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.example.ts  config.ts
infrastructure/: README.md  app.py  cdk.json  pyproject.toml
infrastructure/stacks/: agent_stack.py  app_stack.py  frontend_stack.py  (+2 more)
ingestion/: .eslintrc.json  .gitignore  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  LOCATION_QUICK_REFERENCE.md  READY_TO_TEST.md  SETUP_USER_LOCATIONS.md  SUCCESS.md  TROUBLESHOOT_401.md  USER_LOCATION_COMPLETE.md  package-lock.json  package.json  test-auth.sh  test-with-token.sh  tsconfig.json
sample-docs/: manchester-job-centre.docx  westminister-job-centre.docx  ~$nchester-job-centre.docx
scripts/: sync-gateway.sh
web-ui/: index.html  package.json  vite.config.ts
(+169 files in other folders)
